Email mostly done

--- a/Excel-Email.ipynb
+++ b/Excel-Email.ipynb
@@ -21,6 +21,7 @@
                 "import smtplib\n",
                 "from email.mime.text import MIMEText\n",
                 "from email.mime.multipart import MIMEMultipart\n",
+                "from email.mime.application import MIMEApplication\n",
                 "import email.utils"
             ]
         },
@@ -38,13 +39,24 @@
             "outputs": [],
             "source": [
                 "# Send email message\n",
-                "def send_email(email_smtp, email_sender, email_receiver, email_subject, email_message):\n",
-                "    email_content = MIMEText(email_message, _charset='UTF-8')\n",
+                "def send_email(email_smtp, email_sender, email_receiver, email_subject, email_message, email_attachment):\n",
+                "    email_content = MIMEMultipart('mixed')\n",
+                "    #email_content = MIMEMultipart(email_message, _charset='UTF-8')\n",
                 "    email_content['Subject'] = email_subject\n",
                 "    email_content['Message-ID'] = email.utils.make_msgid()\n",
                 "    email_content['Date'] = email.utils.formatdate(localtime=1)\n",
                 "    email_content['From'] = email_sender\n",
                 "    email_content['To'] = email_receiver\n",
+                "    email_body = MIMEText(email_message, _charset='UTF-8')\n",
+                "    email_content.attach(email_body)\n",
+                "    # https://www.codeforests.com/2020/06/22/how-to-send-email-via-python\n",
+                "    try:\n",
+                "      with open(email_attachment, \"rb\") as attachment:\n",
+                "        email_assemble = MIMEApplication(attachment.read())\t\n",
+                "        email_assemble.add_header('Content-Disposition', \"attachment; filename= %s\" % email_attachment.split(\"\\\\\")[-1]) \n",
+                "        email_content.attach(email_assemble)\n",
+                "    except Exception as attachment_error:\n",
+                "      print(str(attachment_error))\n",
                 "    try:\n",
                 "        smtpObj = smtplib.SMTP(email_smtp, port=25, local_hostname=None, timeout=5)\n",
                 "        smtpObj.sendmail(email_sender, email_receiver, email_content.as_string())         \n",
@@ -74,6 +86,8 @@
                 "email_receiver = \"[to@somewhere.com]\"\n",
                 "email_subject = \"[Email subject here]\"\n",
                 "email_message = \"[This is where email message text goes!]\"\n",
+                "# Attachment file path and file name here with double slashes\n",
+                "email_attachment = \"[drive:\\\\path\\\\filename.extension]\"\n",
                 "# Use function to send email\n",
                 "email_delivered = send_email(email_smtp, email_sender, email_receiver, email_subject, email_message)\n",
                 "# Check to see if email got delivered\n",
