Excel-Email working

--- a/Excel-Email.ipynb
+++ b/Excel-Email.ipynb
@@ -53,17 +53,17 @@
                 "    try:\n",
                 "      with open(email_attachment, \"rb\") as attachment:\n",
                 "        email_assemble = MIMEApplication(attachment.read())\t\n",
-                "        email_assemble.add_header('Content-Disposition', \"attachment; filename= %s\" % email_attachment.split(\"\\\\\")[-1]) \n",
+                "        email_assemble.add_header('Content-Disposition', \"attachment; filename= %s\" % email_attachment.split(\"//\")[-1]) # Change slashes for Windows\n",
                 "        email_content.attach(email_assemble)\n",
                 "    except Exception as attachment_error:\n",
-                "      print(str(attachment_error))\n",
+                "      print(\"Email attachment error: \" + str(attachment_error))\n",
                 "    try:\n",
                 "        smtpObj = smtplib.SMTP(email_smtp, port=25, local_hostname=None, timeout=5)\n",
                 "        smtpObj.sendmail(email_sender, email_receiver, email_content.as_string())         \n",
                 "        smtpObj.quit()\n",
                 "        return True\n",
-                "    except:\n",
-                "        print ('An error occurred')\n",
+                "    except Exception as email_error:\n",
+                "        print(\"Email error:\" + str(email_error))\n",
                 "        return False"
             ]
         },
@@ -87,9 +87,9 @@
                 "email_subject = \"[Email subject here]\"\n",
                 "email_message = \"[This is where email message text goes!]\"\n",
                 "# Attachment file path and file name here with double slashes\n",
-                "email_attachment = \"[drive:\\\\path\\\\filename.extension]\"\n",
+                "email_attachment = \"path//filename.extension]\" # Change slashes for Windows\n",
                 "# Use function to send email\n",
-                "email_delivered = send_email(email_smtp, email_sender, email_receiver, email_subject, email_message)\n",
+                "email_delivered = send_email(email_smtp, email_sender, email_receiver, email_subject, email_message, email_attachment)\n",
                 "# Check to see if email got delivered\n",
                 "if (email_delivered):\n",
                 "    print (\"Email message was delivered!\")\n",
