Excel to FTP working

--- a/Excel-FTP.ipynb
+++ b/Excel-FTP.ipynb
@@ -2,79 +2,41 @@
     "cells": [
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Setup in VS Code\n",
                 "- First set your Python interpreter in (Cmd Shift P): \"Python: Select Interpreter\" and select a matching \"python3\" for the next line\n",
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
                 "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\""
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 52,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
                 "# The following are for FTPing\n",
-                "from ftplib import FTP\n",
-                "from io import StringIO"
-            ],
-            "outputs": [],
-            "metadata": {}
+                "from ftplib import FTP"
+            ]
         },
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Read Excel file"
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 54,
-            "source": [
-                "# Excel file name\n",
-                "excel_filename = \"testtable_source.xlsx\"\n",
-                "# Create DataFrame from Excel\n",
-                "df_excel = pd.read_excel(excel_filename, converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
-                "# View your new DataFrame\n",
-                "df_excel"
-            ],
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "execute_result",
                     "data": {
-                        "text/plain": [
-                            "          TEST_DATETIME  TEST_NUMBER                                TEST_TEXT  \\\n",
-                            "0   2021-08-25 08:42:43       428514  Record added to Excel August 25 of 2021   \n",
-                            "1   2021-08-25 08:42:43       904954  Record added to Excel August 25 of 2021   \n",
-                            "2   2021-08-25 08:42:43       629890  Record added to Excel August 25 of 2021   \n",
-                            "3   2021-08-25 08:42:43       326473  Record added to Excel August 25 of 2021   \n",
-                            "4   2021-08-26 08:42:43       815098  Record added to Excel August 26 of 2021   \n",
-                            "5   2021-08-26 08:42:43       301769  Record added to Excel August 26 of 2021   \n",
-                            "6   2021-08-26 08:42:43       879650  Record added to Excel August 26 of 2021   \n",
-                            "7   2021-08-26 08:42:43       737747  Record added to Excel August 26 of 2021   \n",
-                            "8   2021-08-27 08:42:43       140170  Record added to Excel August 27 of 2021   \n",
-                            "9   2021-08-27 08:42:43       246890  Record added to Excel August 27 of 2021   \n",
-                            "10  2021-08-27 08:42:43       848615  Record added to Excel August 27 of 2021   \n",
-                            "11  2021-08-27 08:42:43       813903  Record added to Excel August 27 of 2021   \n",
-                            "\n",
-                            "          RECORD_ADDED  \n",
-                            "0  2021-08-25 08:42:43  \n",
-                            "1  2021-08-25 08:42:43  \n",
-                            "2  2021-08-25 08:42:43  \n",
-                            "3  2021-08-25 08:42:43  \n",
-                            "4  2021-08-26 08:42:43  \n",
-                            "5  2021-08-26 08:42:43  \n",
-                            "6  2021-08-26 08:42:43  \n",
-                            "7  2021-08-26 08:42:43  \n",
-                            "8  2021-08-27 08:42:43  \n",
-                            "9  2021-08-27 08:42:43  \n",
-                            "10 2021-08-27 08:42:43  \n",
-                            "11 2021-08-27 08:42:43  "
-                        ],
                         "text/html": [
                             "<div>\n",
                             "<style scoped>\n",
@@ -188,24 +150,63 @@
                             "  </tbody>\n",
                             "</table>\n",
                             "</div>"
+                        ],
+                        "text/plain": [
+                            "          TEST_DATETIME  TEST_NUMBER                                TEST_TEXT  \\\n",
+                            "0   2021-08-25 08:42:43       428514  Record added to Excel August 25 of 2021   \n",
+                            "1   2021-08-25 08:42:43       904954  Record added to Excel August 25 of 2021   \n",
+                            "2   2021-08-25 08:42:43       629890  Record added to Excel August 25 of 2021   \n",
+                            "3   2021-08-25 08:42:43       326473  Record added to Excel August 25 of 2021   \n",
+                            "4   2021-08-26 08:42:43       815098  Record added to Excel August 26 of 2021   \n",
+                            "5   2021-08-26 08:42:43       301769  Record added to Excel August 26 of 2021   \n",
+                            "6   2021-08-26 08:42:43       879650  Record added to Excel August 26 of 2021   \n",
+                            "7   2021-08-26 08:42:43       737747  Record added to Excel August 26 of 2021   \n",
+                            "8   2021-08-27 08:42:43       140170  Record added to Excel August 27 of 2021   \n",
+                            "9   2021-08-27 08:42:43       246890  Record added to Excel August 27 of 2021   \n",
+                            "10  2021-08-27 08:42:43       848615  Record added to Excel August 27 of 2021   \n",
+                            "11  2021-08-27 08:42:43       813903  Record added to Excel August 27 of 2021   \n",
+                            "\n",
+                            "          RECORD_ADDED  \n",
+                            "0  2021-08-25 08:42:43  \n",
+                            "1  2021-08-25 08:42:43  \n",
+                            "2  2021-08-25 08:42:43  \n",
+                            "3  2021-08-25 08:42:43  \n",
+                            "4  2021-08-26 08:42:43  \n",
+                            "5  2021-08-26 08:42:43  \n",
+                            "6  2021-08-26 08:42:43  \n",
+                            "7  2021-08-26 08:42:43  \n",
+                            "8  2021-08-27 08:42:43  \n",
+                            "9  2021-08-27 08:42:43  \n",
+                            "10 2021-08-27 08:42:43  \n",
+                            "11 2021-08-27 08:42:43  "
                         ]
                     },
+                    "execution_count": 54,
                     "metadata": {},
-                    "execution_count": 54
+                    "output_type": "execute_result"
                 }
             ],
-            "metadata": {}
+            "source": [
+                "# Excel file name\n",
+                "excel_filename = \"testtable_source.xlsx\"\n",
+                "# Create DataFrame from Excel\n",
+                "df_excel = pd.read_excel(excel_filename, converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
+                "# View your new DataFrame\n",
+                "df_excel"
+            ]
         },
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# FTP Excel File"
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "# FTP site details\n",
                 "ftp_server = \"ftp.servername.com\"\n",
@@ -213,45 +214,44 @@
                 "ftp_pass = \"password\"\n",
                 "ftp_path = \"~\"\n",
                 "# FTP start session\n",
-                "ftp = FTP(ftp_server)\n",
+                "ftp_connection = FTP(ftp_server)\n",
                 "# FTP login\n",
-                "ftp.login(ftp_user, ftp_pass)\n",
+                "ftp_connection.login(ftp_user, ftp_pass)\n",
                 "# FTP set remote directory\n",
-                "ftp.cwd(ftp_path)\n",
-                "# FTP build buffer\n",
-                "ftp_buffer = StringIO.StringIO()\n",
-                "df_excel.to_csv(ftp_buffer) ### REALLY WANT TO SEND AS EXCEL!\n",
-                "ftp_text = ftp_buffer.getvalue()\n",
-                "ftp_payload = io.BytesIO(str.encode(ftp_text))\n",
+                "ftp_connection.cwd(ftp_path)\n",
                 "# FTP send DataFrame as a file\n",
                 "ftp_store_command = \"STOR \" + excel_filename\n",
-                "ftp.storbinary(ftp_store_command, ftp_payload) ### NOT WORKING!"
-            ],
-            "outputs": [],
-            "metadata": {}
+                "try:\n",
+                "    with open(excel_filename, \"rb\") as ftp_file:\n",
+                "        ftp_connection.storbinary(ftp_store_command, ftp_file)\n",
+                "except Exception as ftp_error:\n",
+                "      print(\"FTP file error: \" + str(ftp_error))\n",
+                "# FTP close\n",
+                "ftp_connection.quit()\n"
+            ]
         }
     ],
     "metadata": {
-        "orig_nbformat": 4,
+        "interpreter": {
+            "hash": "082e9a3bcad0a290d0001e938aa60b99250c6c2ef33a923c00b70f9826caf4b7"
+        },
+        "kernelspec": {
+            "display_name": "Python 3.8.0 64-bit",
+            "name": "python3"
+        },
         "language_info": {
-            "name": "python",
-            "version": "3.8.0",
-            "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
                 "version": 3
             },
-            "pygments_lexer": "ipython3",
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
             "nbconvert_exporter": "python",
-            "file_extension": ".py"
+            "pygments_lexer": "ipython3",
+            "version": "3.8.0"
         },
-        "kernelspec": {
-            "name": "python3",
-            "display_name": "Python 3.8.0 64-bit"
-        },
-        "interpreter": {
-            "hash": "082e9a3bcad0a290d0001e938aa60b99250c6c2ef33a923c00b70f9826caf4b7"
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
