Excel FTP download added

--- a/Excel-FTP.ipynb
+++ b/Excel-FTP.ipynb
@@ -188,9 +188,9 @@
             ],
             "source": [
                 "# Excel file name\n",
-                "excel_filename = \"testtable_source.xlsx\"\n",
+                "excel_filename_source = \"testtable_source.xlsx\"\n",
                 "# Create DataFrame from Excel\n",
-                "df_excel = pd.read_excel(excel_filename, converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
+                "df_excel = pd.read_excel(excel_filename_source, converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
                 "# View your new DataFrame\n",
                 "df_excel"
             ]
@@ -199,7 +199,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# FTP Excel File"
+                "# FTP Setup"
             ]
         },
         {
@@ -218,16 +218,70 @@
                 "# FTP login\n",
                 "ftp_connection.login(ftp_user, ftp_pass)\n",
                 "# FTP set remote directory\n",
-                "ftp_connection.cwd(ftp_path)\n",
-                "# FTP send DataFrame as a file\n",
-                "ftp_store_command = \"STOR \" + excel_filename\n",
+                "ftp_connection.cwd(ftp_path)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# FTP Upload Excel File"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# FTP send file\n",
+                "ftp_store_command = \"STOR \" + excel_filename_source\n",
                 "try:\n",
-                "    with open(excel_filename, \"rb\") as ftp_file:\n",
+                "    with open(excel_filename_source, \"rb\") as ftp_file:\n",
                 "        ftp_connection.storbinary(ftp_store_command, ftp_file)\n",
                 "except Exception as ftp_error:\n",
-                "      print(\"FTP file error: \" + str(ftp_error))\n",
+                "      print(\"FTP upload file error: \" + str(ftp_error))"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# FTP Download Excel File"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Excel new file name\n",
+                "excel_filename_new = \"testtable_source_copy.xlsx\"\n",
+                "# FTP download file\n",
+                "ftp_retrieve_command = \"RETR \" + excel_filename_source\n",
+                "try:\n",
+                "    with open(excel_filename_new, \"wb\") as ftp_file:\n",
+                "        ftp_connection.retrbinary(ftp_retrieve_command, ftp_file.write)\n",
+                "except Exception as ftp_error:\n",
+                "      print(\"FTP download file error: \" + str(ftp_error))"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# FTP Close Connection"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "# FTP close\n",
-                "ftp_connection.quit()\n"
+                "ftp_connection.quit()"
             ]
         }
     ],
