--- a/Excel-Email.ipynb
+++ b/Excel-Email.ipynb
@@ -41,7 +41,6 @@
                 "# Send email message\n",
                 "def send_email(email_smtp, email_sender, email_receiver, email_subject, email_message, email_attachment):\n",
                 "    email_content = MIMEMultipart('mixed')\n",
-                "    #email_content = MIMEMultipart(email_message, _charset='UTF-8')\n",
                 "    email_content['Subject'] = email_subject\n",
                 "    email_content['Message-ID'] = email.utils.make_msgid()\n",
                 "    email_content['Date'] = email.utils.formatdate(localtime=1)\n",
@@ -49,7 +48,6 @@
                 "    email_content['To'] = email_receiver\n",
                 "    email_body = MIMEText(email_message, _charset='UTF-8')\n",
                 "    email_content.attach(email_body)\n",
-                "    # https://www.codeforests.com/2020/06/22/how-to-send-email-via-python\n",
                 "    try:\n",
                 "      with open(email_attachment, \"rb\") as attachment:\n",
                 "        email_assemble = MIMEApplication(attachment.read())\t\n",
@@ -87,7 +85,7 @@
                 "email_subject = \"[Email subject here]\"\n",
                 "email_message = \"[This is where email message text goes!]\"\n",
                 "# Attachment file path and file name here with double slashes\n",
-                "email_attachment = \"path//filename.extension]\" # Change slashes for Windows\n",
+                "email_attachment = \"[path//filename.extension]\" # Change slashes for Windows\n",
                 "# Use function to send email\n",
                 "email_delivered = send_email(email_smtp, email_sender, email_receiver, email_subject, email_message, email_attachment)\n",
                 "# Check to see if email got delivered\n",
